# parallel_lab

./: .gitignore  CMakeLists.txt  README.md
common/: opencv-bench.h
lab1-naive/: .gitignore  CMakeLists.txt  baseline.cpp  benchmark.cpp  common.h  cuda-add.cu  mpi-add.cpp  naive.md  openmp-add.cpp  pthread-add.cpp
lab2-pthread/: CMakeLists.txt  pthread-erode.cpp
lab2-pthread.2/: pthread-erode.cpp
lab3-mpi/: CMakeLists.txt  mpi-erode.cpp
lab3-openmp/: CMakeLists.txt  openmp-erode.cpp
lab4-mpi/: mpi-erode.cpp
lab5-cuda/: CMakeLists.txt  cuda-erode.cu  fakemain.cpp  simpleTexture.cu
log/: CTestCostData.txt
opencv-trial/: CMakeLists.txt  IwException.cpp  cv.cpp
project-sudoku/: CMakeLists.txt  analysis.inc.h  io.inc.h  solver.inc.h  sudoku-gp.cpp  sudoku-parallel.cpp  sudoku.cpp
project-sudoku/data/: 16grid.txt  data.txt  fuck.txt  none.txt
project-sudoku/generator/: CMakeLists.txt  generator.inc.h  io.inc.h  main.cpp  solver.inc.h
